--- a/AvilioLanding/index.html
+++ b/AvilioLanding/index.html
@@ -8,7 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/blocks/header.css">
+    <link rel="stylesheet" href="css/blocks/main.css">
+    <link rel="stylesheet" href="css/blocks/sub.css">
+    <link rel="stylesheet" href="css/blocks/footer.css">
 </head>
 <body>
    <header class="header">
@@ -121,5 +125,17 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer__container">
+            <ul class="footer__items">
+                <li class="footer__item-title">Alivio</li>
+                <li class="footer__item">Why Alivio</li>
+                <li class="footer__item">Solutions</li>
+                <li class="footer__item">Community</li>
+                <li class="footer__item">Pricing</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
